﻿V.5 (alpha)					?

	Notice:
		Due to new levels and change in the save format, all saves prior to this version will be erased

	New:
		Introduction cutscene:
			There is now a "0" level which will play a cutscene explaining why the kid is so greedy

	Changes:
		You can interact with the up/down key with objects and doors
		Rolling through a door will now close it if you're rolling in the closing direction
		Slamming a door on a NPC will increase their beat rate

	Fixes:
		Fixes the slamming sound and animation on retirees and nurses		
		Fixes retirees hurting you while being stunned


V.4 (alpha)					4th August 2017

	Notice:
		Due to modified levels, all saves prior to this version will be erased

	New:
		A few new levels
		Game editor: 
			The game now comes with its building editor in the "./Editor" folder
			For a complete tutorial of how it works, please refer to this video: YT link
			There is no Steam integration yet, and as a consequence, you can test only one building at a time
			The editor only works on Windows (for now)
		Basic workshop support:
			You can export and manually share levels
			If they are present in the "./Content/Workshop" folder, they will appear in the game workshop menu
			There is no Steam integration yet

	Changes:
		A few levels have a lowered difficulty, but we still have to revamp to whole difficulty curve

	Fixes:
		Fixes Russian crashing on game over and level complete screens


V.3 (alpha)					29th June 2017

	Notice:
		Due to a new internal level structure, all saves prior to this version will be erased

	New:
		Tutorial levels and new or reworked levels
		3 new retiree sprites
		1 new nurse sprites
		1 new cop sprites

	Changes:
		Reworked MacOS and Linux runtime for better compatibility and performance.


V.2 (alpha)					2nd June 2017

	First public release